--- a/TodoApp-Server/.env.example
+++ b/TodoApp-Server/.env.example
@@ -1,5 +1,5 @@
 SERVER_BASE_URL=https://localhost:8080
-CLIENT_BASE_URL=http://localhost:3000
+CLIENT_BASE_URL=https://localhost:3000
 
 DB_HOST=localhost
 DB_USER=
