--- a/TodoApp-Client/package.json
+++ b/TodoApp-Client/package.json
@@ -9,19 +9,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "tailwindcss-elevation": "^2.0.0",
-
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3"
+    "nuxt": "^3.4.0",
+    "tailwindcss-elevation": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-
+    "naive-ui": "^2.34.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
