--- a/TodoApp-Client/.env.example
+++ b/TodoApp-Client/.env.example
@@ -1,2 +1,2 @@
-SERVER_BASE_URL=https://localhost:8080
-CLIENT_BASE_URL=https://localhost:3000
+NUXT_SERVER_BASE_URL=https://localhost:8080
+NUXT_CLIENT_BASE_URL=https://localhost:3000
